force-app/main/default/objects/User_Story_Task__c/User_Story_Task__c.object-meta.xml
<CustomObject>
    <!---->
    <label>User Story Task</label>
    <nameField>
        <displayFormat>Task-{0000000}</displayFormat>
        <label>User Story Tasks Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Story Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>