force-app/main/default/objects/User_Story_Task__c/fields/Develop_this_Apex_Class__c.field-meta.xml
<CustomField>
    <fullName>Develop_this_Apex_Class__c</fullName>
    <label>Develop this Apex Class</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>