force-app/main/default/objects/User_Story_Task__c/fields/Develop_this_Custom_Field__c.field-meta.xml
<CustomField>
    <fullName>Develop_this_Custom_Field__c</fullName>
    <label>Develop this Custom Field</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>