force-app/main/default/objects/User_Story_Task__c/fields/Develop_this_Lightning_Web_Component__c.field-meta.xml
<CustomField>
    <fullName>Develop_this_Lightning_Web_Component__c</fullName>
    <label>Develop this Lightning Web Component</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>