force-app/main/default/objects/User_Story_Task__c/fields/Fix_Error__c.field-meta.xml
<CustomField>
    <fullName>Fix_Error__c</fullName>
    <label>Fix Error</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>