force-app/main/default/objects/User_Story_Task__c/fields/Task_Description__c.field-meta.xml
<CustomField>
    <fullName>Task_Description__c</fullName>
    <label>Task Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>