force-app/main/default/objects/User_Story_Task__c/fields/Task_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Task_Order_Number__c</fullName>
    <label>Task Order Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>