force-app/main/default/objects/User_Story_Task__c/fields/Type_of_Task__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Task__c</fullName>
    <label>Type of Task</label>
    <length>255</length>
    <type>Text</type>
</CustomField>